skims\feat(back): #3337.2 local functional tests
- Improve a lot the functional tests
- Swap a translation that I discovered to
  be wrong thanks to these tests :)
- Move from stderr to stdout the logging system


Former-commit-id: 3031c14cf39bae6acc9e6a577fb71fe9e8fe6b10

--- a/skims/static/translations/findings/F001_JPA.yaml
+++ b/skims/static/translations/findings/F001_JPA.yaml
@@ -50,5 +50,5 @@ utils.model.finding.enum.F001_JPA.threat:
   es: >
     Atacante autenticado desde Internet.
 utils.model.finding.enum.F001_JPA.title:
-  en: FIN.S.001. Inyección SQL - Java Persistence API
-  es: FIN.S.001. SQL injection - Java Persistence API
+  en: FIN.S.001. SQL injection - Java Persistence API
+  es: FIN.S.001. Inyección SQL - Java Persistence API
