--- a/airs/content/pages/products/asserts/index.adoc
+++ b/airs/content/pages/products/asserts/index.adoc
@@ -1,4 +1,4 @@
-:slug: asserts/
+:slug: products/asserts/
 :description: Fluid Attacks presents Asserts, an open-source tool that looks for deterministic and peripheral vulnerabilities verifying their status by automated attacks.
 :keywords: Fluid Attacks, Resources, Asserts, Security, Vulnerabilities, Automated Attacks, Pentesting, Ethical Hacking
 :assertsindex: yes
