airs\refac(doc): #3422 skims change titles
- Three titles of the Skims' Key Features were changed.


Former-commit-id: 86d8964cf16df26dc4ebf1a63acae888487106a7

--- a/airs/content/pages/products/skims/index.adoc
+++ b/airs/content/pages/products/skims/index.adoc
@@ -5,20 +5,20 @@
 
 = Skims
 
-=== Easy-to-use SAST tool
+=== Different targets
 
 Performs exhaustive analyses on portions of code or on ready-to-deploy
 applications to detect certain security weaknesses.
 
-=== Code Scanner
+=== Simultaneous scanning
 
-Scans code as it is written by developers, saving time in fixing
-security-related flaws.
+Scans code as it is written by developers,
+saving time in fixing security-related flaws.
 
-=== Vulnerabilities Finder
+=== High speed
 
-Finds peripheral or superficial vulnerabilities at high speed in 100% of the
-code.
+Finds peripheral or superficial vulnerabilities
+at high speed in 100% of the code.
 
 === Communication
 
