--- a/airs/content/pages/products/skims/index.adoc
+++ b/airs/content/pages/products/skims/index.adoc
@@ -1,6 +1,6 @@
 :slug: products/skims/
-:description: Skims is a SAST tool used to search for and identify known vulnerabilities and then automatically verify if they have been closed.
-:keywords: Fluid Attacks, Products, Skims, SAST, Tool, Ethical Hacking, Pentesting, Security
+:description: Skims is a SAST/SCA tool used to search for and identify known vulnerabilities and then automatically verify if they have been closed.
+:keywords: Fluid Attacks, Products, Skims, SAST, SCA, Tool, Ethical Hacking, Pentesting, Security
 :template: products/skims
 
 = Skims
@@ -30,4 +30,4 @@ Provides evidence of closure for each repaired weakness.
 
 === Automation
 
-Contributes to the security of your DevOps with an automated SAST.
+Contributes to the security of your DevOps with automated SAST/SCA.
