airs\fix(doc): #3425.2 broken links
- Fixed broken links referred to Asserts


Former-commit-id: dbc897447c42c66ee15676958372d974b566421c

--- a/airs/content/blog/big-code/index.adoc
+++ b/airs/content/blog/big-code/index.adoc
@@ -213,7 +213,7 @@ Now for a more realistic test,
 let's try running `DeepCode` on some of our own repos, namely,
 [inner]#link:../../products/integrates[Integrates]#,
 our platform for vulnerability centralization and management and
-[inner]#link:../../asserts[Asserts]#,
+[inner]#link:../../products/asserts/[Asserts]#,
 our vulnerability automation framework.
 Both are
 link:https://gitlab.com/fluidattacks[open-source],
