--- a/airs/content/pages/products/rules/findings/hygiene/043/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/043/index.adoc
@@ -16,39 +16,39 @@ susceptible to attacks such as click-jacking and XSS.
 
 For application servers, the required HTTP headers are the following:
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_access_control_allow_origin_missing[Access-Control-Allow-Origin]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_access_control_allow_origin_missing[Access-Control-Allow-Origin]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_cache_control_missing[Cache-Control]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_cache_control_missing[Cache-Control]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_content_security_policy_missing[Content-Security-Policy]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_content_security_policy_missing[Content-Security-Policy]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_expires_missing[Expires]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_expires_missing[Expires]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_content_type_missing[Content-Type]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_content_type_missing[Content-Type]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_hsts_missing[Strict-Transport-Security (*HSTS*)]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_hsts_missing[Strict-Transport-Security (*HSTS*)]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_perm_cross_dom_pol_missing[X-Permitted-Cross-Domain-Policies ]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_perm_cross_dom_pol_missing[X-Permitted-Cross-Domain-Policies ]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_pragma_missing[Pragma]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_pragma_missing[Pragma]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_content_type_options_missing[X-Content-Type-Options]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_content_type_options_missing[X-Content-Type-Options]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_frame_options_missing[X-Frame-Options]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_frame_options_missing[X-Frame-Options]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_xxs_protection_missing[X-XSS-Protection]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.http/#fluidasserts.proto.http.is_header_x_xxs_protection_missing[X-XSS-Protection]#.
 
 For API servers, the required HTTP headers are the following:
 
-* [inner]#link:/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_content_type_missing[Content-Type]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_content_type_missing[Content-Type]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.accepts_insecure_accept_header[Accept]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.accepts_insecure_accept_header[Accept]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_hsts_missing[Strict-Transport-Security (*HSTS*)]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_hsts_missing[Strict-Transport-Security (*HSTS*)]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_x_content_type_options_missing[X-Content-Type-Options]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_x_content_type_options_missing[X-Content-Type-Options]#.
 
-* [inner]#link:/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_x_frame_options_missing[X-Frame-Options]#.
+* [inner]#link:/resources/doc/asserts/fluidasserts.proto.rest/#fluidasserts.proto.rest.is_header_x_frame_options_missing[X-Frame-Options]#.
 
 == Rules
 
